# LedFx

./: Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  win-portable.spec
.github/workflows/: ci-build-osx-arm.yml  ci-build.yml  gh-build.yml  gh-builder.yml  gh-input-builder.yml
ledfx/: core.py  utils.py
ledfx/api/: __init__.py
ledfx/devices/: __init__.py  openrgb.py
tools/: hook-samplerate.py
