[tool.poetry]
name = "ledfx"
version = "1.0.0-dev1"
description = "A network based light effect controller"
license = "The MIT License"
authors = ["Austin Hodges <austin.b.hodges@gmail.com>"]
maintainers = ["LedFx Developers <ledfx.app@gmail.com>"]
readme = "README.rst"
homepage = "https://ledfx.app"
repository = "https://github.com/LedFx/LedFx"
documentation = "https://ledfx.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]
include = [
  "README.rst",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "LICENSE.txt",
  "requirements.txt"
]

[tool.poetry.urls]
"Discord" = "https://discord.gg/PqXMuthSNx"

[tool.poetry.plugins."console_scripts"]
"ledfx" = "ledfx.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "~=1.20.2"
voluptuous = "~=0.12.1"
sounddevice = "~=0.4.2"
sacn = "~=1.6.3"
aiohttp = "~=3.7.4.post0"
multidict = "~=5.0.0"
requests = "~=2.24.0"
aubio = "~=0.4.9"
zeroconf = "0.30.0"
# pywin32>=300 does not meet the requirements of pyupdater~=3.1.1
#pywin32 = { version = ">=300", markers = "platform_system == 'Windows'"}
cython = "~=0.29.21"
pyupdater = "~=3.1.1"
sentry-sdk = "1.3.1"
certifi = "~=2020.12.5"
pyserial = "~=3.5"
pystray = "~=0.17"
tcp-latency = "~=0.0.10"
aiohttp_cors = "~=0.7.0"
paho-mqtt = "~=1.5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "~=3.9.2"
black = "~=21.7b0"
isort = "~=5.9.3"
pre-commit = "~=2.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "3.3.1"
sphinxcontrib-websupport = "1.2.4"
sphinxcontrib-httpdomain = "1.7.0"
sphinx-autodoc-typehints = "1.11.1"
sphinx-autodoc-annotation = "1.0-1"
sphinx_rtd_theme = "0.5.0"
travis-sphinx = "2.2.1"
rstcheck = "3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0", "numpy~=1.20.2", "wheel~=0.36.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py37", "py38"]

[tool.isort]
profile = "black"
line_length = 79
# The following are the default values applied when profile="black"
# multi_line_output = 3
# include_trailing_comma = True
# force_grid_wrap = 0
# use_parentheses = True
# ensure_newline_before_comments = True
